# c-study

./: README.md
atari/cleanmem/: cleanmem.asm
atari/colorbg/: colorbg.asm
atari/rainbow/: Makefile  rainbow.asm
book-kernighan-ritchie/: CMakeLists.txt
book-kernighan-ritchie/chapter1-tutorial-introduction/: CMakeLists.txt
book-kernighan-ritchie/chapter1-tutorial-introduction/src/: exercise1_6.c  exercise1_7.c  exercise1_8.c  exercise1_9.c
gtk-simple/: CMakeLists.txt  simple.c
gtk3-calculator/: CMakeLists.txt
gtk3-calculator/src/: main.c
gtk3-calculator/themes/: gtk-calculator.css
gtk3-calculator/ui/: calculator.glade  calculator.glade~
gtk4-helloworld/: CMakeLists.txt  hello-world.c
lightning-c/: CMakeLists.txt  README.md
lightning-c/src/: cuenta_usuario.h  global.h  input.c  input.h  main.c  main.h  menu.c  menu.h  output.c  output.h
linux-programming-interface/: .gitignore  CMakeLists.txt
linux-programming-interface/append_beginning/: CMakeLists.txt  main.c
linux-programming-interface/atomic_append/: CMakeLists.txt  main.c
linux-programming-interface/compare_offset_and_flags/: CMakeLists.txt  main.c
linux-programming-interface/cp_holes/: CMakeLists.txt  main.c
linux-programming-interface/dup_fcntl/: CMakeLists.txt  main.c
linux-programming-interface/fileio/: CMakeLists.txt  seek_io.c
linux-programming-interface/lib/: ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
linux-programming-interface/longjmp_into_function/: CMakeLists.txt  main.c
linux-programming-interface/mem_segments/: CMakeLists.txt  main.c
linux-programming-interface/readv_writev/: CMakeLists.txt  main.c
linux-programming-interface/setenv_using_getenv/: CMakeLists.txt  main.c
linux-programming-interface/tee_command/: CMakeLists.txt  main.c
pointers_to_functions/: CMakeLists.txt  main.c  main.h
windowsapi/: CMakeLists.txt
windowsapi/lock-workstation/: main.c
windowsapi/screen-size/: main.c
windowsapi/windowtitle/: main.c
zeromq/: CMakeLists.txt  conanfile.txt
zeromq/src/: hwclient.cpp
zeromq/src/helloworld/: hwserver.cpp
zeromq/src/weather/: wuclient.cpp  wuserver.cpp
