cmake_minimum_required(VERSION 3.11)
project(simple C)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK4 REQUIRED gtk4)
include_directories(${GTK4_INCLUDE_DIRS})
link_directories(${GTK4_LIBRARY_DIRS})
add_definitions(${GTK4_CFLAGS_OTHER})

if(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
	SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} " -mwindows")
endif()
message(${CMAKE_BUILD_TYPE})
add_executable(hello-world hello-world.c)
target_link_libraries(hello-world ${GTK4_LIBRARIES})
